# FindSubstringInString

./: .gitignore  BF.py  KMP.py  README.md  benchmark_results.csv  main.py  pyproject.toml  results.py  text.py
src/: BF.py  KMP.py  main.py  results.py  run.py  text.py
