[project]
name = "findsubstringinstring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "ruff>=0.15.12",
]
[tool.mypy]
ignore_missing_imports = true